# active-collab-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install-skill.sh  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  constitution.md  index.md
docs/adr/: 0001-replace-curses-tui-with-textual.md  0002-rewrite-in-rust-with-ratatui.md  0003-http-transport-and-mocked-server-testing.md  0004-tests-in-tests-dir-via-path-include.md  0005-i18n-catalog-as-embedded-json.md  0006-promote-crate-to-repo-root.md  0007-tui-module-structure.md  0008-async-event-loop-with-eventstream-and-select.md  0009-tui-visual-redesign-vibrant-dashboard.md  0010-detail-sectioned-panels-focus-scroll.md  0011-agent-json-output-contract.md  0012-mouse-capture-toggle-for-text-selection.md  0013-tty-gated-default-subcommand.md  0014-browse-list-project-name-cache-swr.md  0015-richtext-html-subset-styled-segments.md  0016-refactor-render-decompose-relocate.md  0017-task-list-first-paint-cache-swr-entry.md  0018-detail-chrome-dynamic-height-wrap.md  0019-richtext-full-activecollab-tag-coverage.md  0020-body-links-inline-url-native-click.md  0021-app-managed-text-selection-clipboard.md  0022-detail-title-as-meta-row.md  0023-asset-label-derivation.md  0024-asset-card-breathing-room.md  0025-asset-activation-ctrl-cmd-click.md  0026-task-list-as-cards.md  0027-asset-open-hint-in-card.md  0028-asset-panel-single-layout-source.md  0029-assets-inline-in-scrollable-detail-content.md  0030-richtext-wrap-positional-style.md  0031-tasks-card-layout-cache.md  0032-asset-row-link-style-structural.md  0033-authenticated-write-seam-comment-client.md  0034-comment-compose-mode-multiline.md  0035-server-truth-refresh-after-comment-mutation.md  0036-permission-aware-comment-targeting.md  (+31 more)
legacy/: SKILL.md  active_collab.py  test_active_collab.py
locales/: pt_BR.json
src/: agent_json.rs  app.rs  cli.rs  client.rs  commands.rs  config.rs  controller.rs  http.rs  i18n.rs  main.rs  models.rs  render.rs  richtext.rs  timing.rs  tui.rs
tests/: comment_policy.rs  install_skill.rs  test_assets.py  test_cli.py  test_client.py  test_config.py  test_gitbranch.py  test_http.py  test_i18n.py  test_models.py  test_render.py  test_store.py  test_tui.py
(+175 files in other folders)
