[package]
name = "ac"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ac"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
bytes = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
html-escape = "0.2"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rpassword = "7"
url = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
