[package]
name = "ac"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ac"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
bytes = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
html-escape = "0.2"
ratatui = "0.29"
unicode-width = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = "0.1"
rpassword = "7"
url = "2"

arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
