[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "active-collab-cli"
dynamic = ["version"]
description = "ActiveCollab task fetcher — multi-instance, SQLite-backed, stdlib only."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
active-collab = "active_collab.cli:main"
ac = "active_collab.cli:main"

[tool.setuptools.dynamic]
version = { attr = "active_collab.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
